# owl

./: .dfmt.toml  .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  Makefile  NAMING_CONVENTIONS.md  README.md  dub.sdl  go.mod  go.sum  main.go  opencode.json
completions/: bash  fish  zsh
doc/: owl.8
internal/cli/: cli.go  legacy_sync.go
internal/config/: config.go
internal/constants/: constants.go
internal/dotfiles/: dotfiles.go
internal/environment/: environment.go
internal/handlers/: apply.go  enhanced.go  other.go
internal/services/: services.go
internal/setup/: setup.go
internal/types/: types.go
internal/ui/: ui.go
internal/utils/: config_lock.go  errors.go  fs.go  input.go  performance.go  slice.go
pkg/owl/: manager.go
src/: error.rs  main.d
src/cli/: handler.rs  ui.rs
src/commands/: add.rs  adopt.rs  clean.rs
src/commands/apply/: analysis.rs  mod.rs  packages.rs
src/config/: analysis.d  loader.d  parser.d  paths.d  write.d
src/core/: dotfiles.rs  env.rs  mod.rs  package.rs  pm.rs  search.rs  services.rs  state.rs
src/core/config/: mod.rs  parser.rs  validator.rs
src/internal/: color.rs  constants.rs  files.rs  util.rs
src/systems/: dotfiles.d  env.d  services.d  setup.d
src/terminal/: apply.d  args.d  cli.d  colors.d  commands.d  options.d  prompt.d  ui.d
src/terminal/commands/: apply.d  common_imports.d  config_edit.d  package_mgmt.d  upgrade.d
src/utils/: common.d  process.d  selection.d  sh.d  sh.d.bak  sh.d.bakkert
