[package]
name = "owl"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tar = "0.4"
ureq = { version = "2.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.0"
